:bug: Fix z-index of sidebar nav fade element.

--- a/frontend/source/scss/components/organisms/sidebar.scss
+++ b/frontend/source/scss/components/organisms/sidebar.scss
@@ -33,7 +33,7 @@
       height: 16px;
       background: transparent;
       pointer-events: none;
-      z-index: 11;
+      z-index: 1;
   }
 
   &:before {
